# ipm_e2e

./: .gitignore  .readthedocs.yaml  Makefile  README.md  TODO  requirements-dev.txt  setup.cfg  thingsToInstall.txt
docs/: requirements-vext-gi.txt  requirements.txt
docs/dev/: NOTAS.md
docs/source/: api.rst  cli.rst  conf.py  index.rst  motivation.md
src/ipm/: e2e.py
