[metadata]
name = ipm-e2e
version = 0.0.1
url = https://github.com/cabrero/ipm-e2e
author = David Cabrero Souto
author_email = "David Cabrero Souto" <david.cabrero@udc.es>
description = "Library used to ease the development of automated tests based on AT-SPI"
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-2.0-only
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    atspi-dump = ipm.e2e:main

[options.packages.find]
where = src
exclude =
    test*
